# liveswebench

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
liveswebench/agents/: README.md  aider.py  openhands.py  run_agent.py  swe_agent.py
liveswebench/agents/claude_code/: Dockerfile  README.md  claude_code.py  start_docker.py
liveswebench/collect/: build_dataset.py  extract_autocomplete_tasks.py  extract_tasks.py  generate_edit_prompts.py  get_tasks_pipeline.py  print_pulls.py  process_patch.py
liveswebench/harness/: calculate_scores.py  collect_jsonl.py  generate_patch.py  prepare.py  stats.py  test.py  util.py  validate.py
liveswebench/util/: repo.py  tasks.py  util.py
tests/: test_generate_patch.py  test_patch_utils.py  test_prepare.py  test_setup.py  test_test.py
